--- a/style.css
+++ b/style.css
@@ -3,3 +3,57 @@
   margin: 0;
   box-sizing: border-box;
 }
+
+:root{
+  --header1:calc(2rem + 1vw);
+  --header2:calc(3.5rem + 1vw);
+  --header3:calc(3rem + 1vw);
+  --header4:calc(2.4rem + 1vw);
+  --text:calc(1.5rem + 1vw);
+  --big:calc(2.4rem + 1vw);
+  --sp-color:#906272;
+  --main-color:#414141;
+  --se-color:#424242;
+
+}
+
+html {
+  font-size: 62.5%;
+}
+
+h1 {
+  font-size: var(--header1);
+}
+
+h2 {
+font-size: var(--header2);
+}
+
+h3 {
+  font-size: var(--header3);
+}
+
+h4,h5 {
+  font-size: var(--header4);
+}
+
+li,button,label,input,p{
+  font-size: var(--text);
+}
+
+a {
+  text-decoration: none;
+  
+}
+
+ul {
+  list-style: none;
+}
+
+.flex{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
